@@ -12,3 +12,4 @@ Should use REST : see the 'restExample($session)' function
    Please update GNU ChangeLog
 
 * v0.0.0-3 (04 mar 2012 - ???) SLOC ??? UT ?? FT ??:??
+- Create pkg-config autoconf's input files for libclient and libserver
