@@ -43,7 +43,9 @@ AC_OUTPUT([
   src/Makefile
   src/foswiki_plugin/Makefile
   src/libclient/Makefile
+  src/libclient/rainbrurpg-meta-client.pc
   src/libserver/Makefile
+  src/libserver/rainbrurpg-meta-server.pc
 ])
 
 dnl Options summary
